@@ -6,6 +6,8 @@ SimpleMail Open Source - ChangeLog
 	* amiga-mui/configwnd.c, amiga-mui/gui_main.c, configuration.(c|h), 
 	  doc/amiga/SimpleMail.guide, indep-include/configwnd.h, simplemail.c:
 	  Added a new config option "Folder to display at startup".
+	* amiga-mui/mailtreelistclass-new.c: Added newmouse wheel standard support.
+	  The list is now using the standard list font setting from mui "Listviews".
 
 2007-01-27  Bernd Gollesch <bgollesch@sime.at>
 	* smakefile: Added "amiga-mui/mailtreelistclass-new.c" to the generated makefile
